<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ScrollView
		android:id="@+id/home"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<RelativeLayout
			android:id="@+id/content_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent">


			<RelativeLayout
				android:id="@+id/page_home_ek1"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginTop="0dp">

				<View
					android:id="@+id/_bg__home_ek2"
					android:layout_width="375dp"
					android:layout_height="812dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__home_ek2_shape" />

				<RelativeLayout
					android:id="@+id/icons"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="297.31dp"
					android:layout_marginTop="5dp">

					<RelativeLayout
						android:id="@+id/battery"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="46dp"
						android:layout_marginTop="0dp">

					</RelativeLayout>

				</RelativeLayout>


			</RelativeLayout>

			<ImageView
				android:id="@+id/settings_icon_1"
				android:layout_width="55dp"
				android:layout_height="51dp"
				android:layout_marginStart="307dp"
				android:layout_marginTop="35dp"
				android:contentDescription="settings_icon_1"
				android:src="@drawable/setttings_icon_1" />

			<ImageView
				android:id="@+id/profile_icon_1"
				android:layout_width="53dp"
				android:layout_height="46dp"
				android:layout_marginStart="11dp"
				android:layout_marginTop="38dp"
				android:contentDescription="profile_icon_1"
				android:src="@drawable/profile_icon_1" />


			<RelativeLayout
				android:id="@+id/title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="3dp"
				android:layout_marginTop="226dp">

				<View
					android:id="@+id/_bg__title_ek1"
					android:layout_width="375dp"
					android:layout_height="40dp"
					android:layout_marginStart="-3dp"
					android:layout_marginTop="-226dp"
					android:background="@drawable/_bg__title_ek1_shape" />

				<TextView
					android:id="@+id/welcome__user_"
					android:layout_width="383dp"
					android:layout_height="47.5dp"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="8dp"
					android:layout_marginTop="0dp"
					android:gravity="center"
					android:text="@string/welcome__user__string"
					android:textColor="@color/_bg__android_status_bar_ek1_color"
					android:textSize="25sp" />

			</RelativeLayout>


			<RelativeLayout
				android:id="@+id/donate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="40dp"
				android:layout_marginTop="339dp">

				<View
					android:id="@+id/_bg__donate_ek1"
					android:layout_width="327dp"
					android:layout_height="58dp"
					android:layout_marginStart="-24dp"
					android:layout_marginTop="-339dp"
					android:background="@drawable/_bg__donate_ek1_shape" />

				<Button
					android:id="@+id/appointmentButton"
					android:layout_width="327dp"
					android:layout_height="58dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:text="@string/appointment_string"
					android:textColor="@color/_bg__home_ek2_color"
					android:textSize="20sp"
					android:background="@drawable/button_shape" />

				<View
					android:id="@+id/button_ek1"
					android:layout_width="327dp"
					android:layout_height="58dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/button_ek1_shape" />

				<TextView
					android:id="@+id/appointment"
					android:layout_width="334dp"
					android:layout_height="64dp"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="-3dp"
					android:layout_marginTop="0dp"
					android:gravity="center"
					android:text="@string/appointment_string"
					android:textColor="@color/_bg__home_ek2_color"
					android:textSize="20sp" />

			</RelativeLayout>


			<RelativeLayout
				android:id="@+id/sell"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="40dp"
				android:layout_marginTop="411dp">

				<View
					android:id="@+id/_bg__sell_ek1"
					android:layout_width="327dp"
					android:layout_height="58dp"
					android:layout_marginStart="-24dp"
					android:layout_marginTop="-411dp"
					android:background="@drawable/_bg__sell_ek1_shape" />

				<View
					android:id="@+id/button_ek2"
					android:layout_width="327dp"
					android:layout_height="58dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/button_ek2_shape" />

				<View
					android:id="@+id/button_ek3"
					android:layout_width="327dp"
					android:layout_height="58dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/button_ek3_shape" />

				<TextView
					android:id="@+id/report_suggestion"
					android:layout_width="334dp"
					android:layout_height="64dp"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="-3dp"
					android:layout_marginTop="0dp"
					android:gravity="center"
					android:text="@string/report_suggestion_string"
					android:textColor="@color/_bg__home_ek2_color"
					android:textSize="20sp" />

			</RelativeLayout>


			<RelativeLayout
				android:id="@+id/nutritional_guide"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="40dp"
				android:layout_marginTop="483dp">

				<View
					android:id="@+id/_bg__nutritional_guide_ek1"
					android:layout_width="327dp"
					android:layout_height="58dp"
					android:layout_marginStart="-24dp"
					android:layout_marginTop="-483dp"
					android:background="@drawable/_bg__nutritional_guide_ek1_shape" />

				<View
					android:id="@+id/button_ek4"
					android:layout_width="327dp"
					android:layout_height="58dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/button_ek4_shape" />

				<View
					android:id="@+id/button_ek5"
					android:layout_width="327dp"
					android:layout_height="58dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/button_ek5_shape" />

				<TextView
					android:id="@+id/locate_brgy__hall"
					android:layout_width="334dp"
					android:layout_height="64dp"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="-3dp"
					android:layout_marginTop="0dp"
					android:gravity="center"
					android:text="@string/locate_brgy__hall_string"
					android:textColor="@color/_bg__home_ek2_color"
					android:textSize="20sp" />

			</RelativeLayout>


			<RelativeLayout
				android:id="@+id/nutritional_guide_ek2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="40dp"
				android:layout_marginTop="555dp">

				<View
					android:id="@+id/_bg__nutritional_guide_ek3"
					android:layout_width="327dp"
					android:layout_height="58dp"
					android:layout_marginStart="-27dp"
					android:layout_marginTop="-555dp"
					android:background="@drawable/_bg__nutritional_guide_ek3_shape" />

				<View
					android:id="@+id/button_ek6"
					android:layout_width="327dp"
					android:layout_height="58dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/button_ek6_shape" />

				<View
					android:id="@+id/button_ek7"
					android:layout_width="327dp"
					android:layout_height="58dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/button_ek7_shape" />

				<TextView
					android:id="@+id/announcements"
					android:layout_width="334dp"
					android:layout_height="64dp"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="-3dp"
					android:layout_marginTop="0dp"
					android:gravity="center"
					android:text="@string/announcements_string"
					android:textColor="@color/_bg__home_ek2_color"
					android:textSize="20sp" />

			</RelativeLayout>

		</RelativeLayout>
	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>