<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Appointment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:text="@string/what_documents_do_you_need"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="1in"
                        android:layout_height="1in"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:contentDescription="@string/todo"
                        android:elevation="3dp"
                        android:src="@drawable/imge" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="1.1in"
                        android:text="Certificate of Residency"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="1in"
                        android:layout_height="1in"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:contentDescription="@string/todo2"
                        android:elevation="3dp"
                        android:src="@drawable/imge2" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="1.1in"
                        android:text="Barangay Clearance"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="1in"
                        android:layout_height="1in"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:contentDescription="@string/todo3"
                        android:elevation="3dp"
                        android:src="@drawable/imge3" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="1.1in"
                        android:text="Barangay ID"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="1in"
                        android:layout_height="1in"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:elevation="3dp"
                        android:src="@drawable/imge" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="1.1in"
                        android:text="Certificate of Residency"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="1in"
                        android:layout_height="1in"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:elevation="3dp"
                        android:src="@drawable/imge2" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="1.1in"
                        android:text="Barangay Clearance"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="1in"
                        android:layout_height="1in"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:elevation="3dp"
                        android:src="@drawable/imge3" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="1.1in"
                        android:text="Barangay ID"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="1in"
                        android:layout_height="1in"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:elevation="3dp"
                        android:src="@drawable/imge" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="1.1in"
                        android:text="Certificate of Residency"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="1in"
                        android:layout_height="1in"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:elevation="3dp"
                        android:src="@drawable/imge2" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="1.1in"
                        android:text="Barangay Clearance"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="322dp"
            android:layout_height="70dp"
            android:backgroundTint="#FF0000"
            android:text="@string/proceed"
            android:textColorLink="#675050"
            android:textSize="20sp"
            android:textStyle="normal"
            android:translationX="40dp"
            android:translationY="530dp"
            app:iconTint="#000000" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>